[package]
name = "rsutil"
version = "0.1.0"
authors = ["Leonard Kevin McGuire Jr. <kmcg3413@gmail.com>"]

[lib]

[dependencies.lodepng]
git = "https://github.com/pornel/lodepng-rust.git"
[dependencies.num]
[dependencies.libc]
[dependencies.time]
[dependencies.alsa]
git = "https://github.com/cyndis/rust-alsa.git"
[dependencies]
byteorder = "0.3"
